--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,14 @@ h1 {
   color: #4ECCA3;
 }
 
+h2 {
+  margin: 10px;
+  font-family: 'Lobster', cursive;
+  text-shadow: 5px 0 #232931;
+  font-size: 3rem;
+  color: #cc4e77;
+}
+
 p {
   font-size: 2rem;
   color: #4ECCA3;
